force-app/main/default/objects/eWRTS_Audit__c/eWRTS_Audit__c.object-meta.xml
<CustomObject>
    <label>eWRTS Audit</label>
    <nameField>
        <displayFormat>ILMA-{0000}</displayFormat>
        <label>eWRTS Audit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>eWRTS Audits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>