force-app/main/default/objects/eWRTS_Audit__c/fields/A_Number__c.field-meta.xml
<CustomField>
    <fullName>A_Number__c</fullName>
    <formula>Case__r.A_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>A Number</label>
    <type>Text</type>
</CustomField>