force-app/main/default/objects/eWRTS_Audit__c/fields/Alias_Updated__c.field-meta.xml
<CustomField>
    <fullName>Alias_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Was the Alias Updated in CIS2?</inlineHelpText>
    <label>Alias Reviewed</label>
    <type>Checkbox</type>
</CustomField>