force-app/main/default/objects/eWRTS_Audit__c/fields/Case_Filled_Out__c.field-meta.xml
<CustomField>
    <fullName>Case_Filled_Out__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Case Filled Out</label>
    <type>Checkbox</type>
</CustomField>