force-app/main/default/objects/eWRTS_Audit__c/fields/Correct_RPC_Used__c.field-meta.xml
<CustomField>
    <fullName>Correct_RPC_Used__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Correct RPC Used</label>
    <type>Checkbox</type>
</CustomField>