force-app/main/default/objects/eWRTS_Audit__c/fields/Country_of_Origin__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Origin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Country of Origin Reviewed</label>
    <type>Checkbox</type>
</CustomField>