force-app/main/default/objects/eWRTS_Audit__c/fields/Date_Closed__c.field-meta.xml
<CustomField>
    <fullName>Date_Closed__c</fullName>
    <label>Date Closed</label>
    <type>DateTime</type>
</CustomField>