force-app/main/default/objects/eWRTS_Audit__c/fields/Date_Opened__c.field-meta.xml
<CustomField>
    <fullName>Date_Opened__c</fullName>
    <label>Date Opened</label>
    <type>DateTime</type>
</CustomField>