force-app/main/default/objects/eWRTS_Audit__c/fields/Email_to_Requestor__c.field-meta.xml
<CustomField>
    <fullName>Email_to_Requestor__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Email to Requestor</label>
    <type>Checkbox</type>
</CustomField>