force-app/main/default/objects/eWRTS_Audit__c/fields/Files_Attached__c.field-meta.xml
<CustomField>
    <fullName>Files_Attached__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Were the Files Attached?</inlineHelpText>
    <label>Files Attached</label>
    <type>Checkbox</type>
</CustomField>