force-app/main/default/objects/eWRTS_Audit__c/fields/Gender_Updated__c.field-meta.xml
<CustomField>
    <fullName>Gender_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gender Reviewed</label>
    <type>Checkbox</type>
</CustomField>