force-app/main/default/objects/eWRTS_Audit__c/fields/Is_My_Audit__c.field-meta.xml
<CustomField>
    <fullName>Is_My_Audit__c</fullName>
    <formula>IF( $User.Id = Supervisor__r.Id , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is My Audit</label>
    <type>Checkbox</type>
</CustomField>