force-app/main/default/objects/eWRTS_Audit__c/fields/Name_Updated__c.field-meta.xml
<CustomField>
    <fullName>Name_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Was the Name updated in CIS2?</inlineHelpText>
    <label>Name Reviewed</label>
    <type>Checkbox</type>
</CustomField>