force-app/main/default/objects/eWRTS_Audit__c/fields/RPC_Updated__c.field-meta.xml
<CustomField>
    <fullName>RPC_Updated__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText
  >Was the RPC Code Validated and updated appropriatley?</inlineHelpText>
    <label>RPC Updated</label>
    <type>Checkbox</type>
</CustomField>