force-app/main/default/objects/eWRTS_Audit__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <formula>(IF(Email_to_Requestor__c, 1, 0)  
	+ IF(RPC_Updated__c, 1, 0)   
	+ IF(Correct_RPC_Used__c, 1, 0)
	+ IF(Country_of_Origin__c, 1, 0)  
	+ IF(Alias_Updated__c, 1, 0)  
	+ IF(Name_Updated__c, 1, 0)        
	+ IF(Case_Filled_Out__c, 1, 0)   
	+ IF(Gender_Updated__c, 1, 0)        
		+ IF(Was_CC_Added_to_Email__c, 1, 0)) / 9</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>