force-app/main/default/objects/eWRTS_Audit__c/fields/Score_Icon__c.field-meta.xml
<CustomField>
    <fullName>Score_Icon__c</fullName>
    <formula>IMAGE( 
	IF(Score__c &gt; 0.6, &quot;/img/samples/light_green.gif&quot;, IF(Score__c &gt; 0.3, &quot;/img/samples/light_yellow.gif&quot;, &quot;/img/samples/light_red.gif&quot;)), 
&quot;status color&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score Icon</label>
    <type>Text</type>
</CustomField>