force-app/main/default/objects/eWRTS_Audit__c/fields/Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Processor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>eWRTS_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>