force-app/main/default/objects/eWRTS_Audit__c/fields/Supervisor_Comment__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Comment__c</fullName>
    <label>Supervisor Comment</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>