force-app/main/default/objects/eWRTS_Audit__c/fields/Was_CC_Added_to_Email__c.field-meta.xml
<CustomField>
    <fullName>Was_CC_Added_to_Email__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Was CC Added to Email?</label>
    <type>Checkbox</type>
</CustomField>