force-app/main/default/objects/eWRTS_Audit__c/listViews/All_Audits.listView-meta.xml
<ListView>
    <fullName>All_Audits</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Supervisor__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Audits</label>
</ListView>