force-app/main/default/objects/eWRTS_Audit__c/listViews/All_Open_Audits.listView-meta.xml
<ListView>
    <fullName>All_Open_Audits</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Supervisor__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed</value>
    </filters>
    <label>All Open Audits</label>
</ListView>