force-app/main/default/objects/eWRTS_Audit__c/listViews/My_Audits.listView-meta.xml
<ListView>
    <fullName>My_Audits</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Date_Opened__c</columns>
    <columns>A_Number__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_My_Audit__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Open Audits</label>
</ListView>